Tweak runner UI on refresh I.e., avoid overlap between notification and the progress indicator behind it.

--- a/src/client/assets/styles/extras.scss
+++ b/src/client/assets/styles/extras.scss
@@ -73,17 +73,6 @@ iframe#FirebugUI {
 		text-align: right;
 		margin-top: 15px;
 	}
-
-	.reloading-indicator {
-		display: inline-block;
-		height: 32px;
-
-		span {
-			margin: 0 10px;
-			top: -2px;
-			position: relative;
-		}
-	}
 }
 
 .spinning-icon {
